*Done some changes reported by Amjad

--- a/app/src/main/res/layout/activity_sectionmra.xml
+++ b/app/src/main/res/layout/activity_sectionmra.xml
@@ -270,10 +270,11 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="12dp"
-                            android:hint="@string/nmq106"
-                            android:maxLength="1"
-                            app:maxValue="3"
-                            app:minValue="1"
+                            android:hint="###"
+                            android:maxLength="3"
+                            app:maxValue="999"
+                            app:minValue="001"
+                            app:pattern="[0-9]{3}"
                             app:type="range" />
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
@@ -408,12 +409,11 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="12dp"
-                            android:hint="####.##"
-                            android:layoutDirection="ltr"
-                            app:mask="####.##"
+                            android:hint="####"
+                            android:maxLength="4"
+                            app:minValue="1000"
                             app:maxValue="5000"
-                            app:minValue="900"
-                            app:pattern="^(\\d{4,4}\\.\\d{2,2})$"
+                            app:pattern="[0-9]{4}"
                             app:type="range" />
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
@@ -518,7 +518,7 @@
                             android:maxLength="2"
                             android:text='@{nmq201a.checked ? nmq202m.getText().toString() : ""}'
                             android:visibility='@{nmq201a.checked? View.VISIBLE : View.GONE}'
-                            app:maxValue="36"
+                            app:maxValue="12"
                             app:minValue="0"
                             app:type="range" />
 
