--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -198,7 +198,7 @@
                             android:clickable="true"
                             android:focusable="true"
                             android:foreground="?android:attr/selectableItemBackground"
-                            android:onClick="@{callback::syncServer}">
+                            android:onClick="@{ () -> callback.syncServer()}">
 
                             <RelativeLayout
                                 android:layout_width="match_parent"
