--- a/app/src/main/res/layout/activity_sectionmra.xml
+++ b/app/src/main/res/layout/activity_sectionmra.xml
@@ -226,9 +226,9 @@
 
                         <EditText
                             android:id="@+id/nmq105"
-                            android:enabled="false"
                             style="@style/EditText"
                             android:layout_marginBottom="12dp"
+                            android:enabled="false"
                             android:hint="@string/nmq105" />
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
@@ -265,14 +265,10 @@
                                 android:text="@string/Q_nmq106" />
                         </RelativeLayout>
 
-                        <EditText
+                        <Spinner
                             android:id="@+id/nmq106"
-                            style="@style/EditText"
-                            android:enabled="false"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginBottom="12dp"
-                            android:hint="###" />
+                            style="@style/spinner"
+                            android:layout_width="match_parent" />
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
 
@@ -311,7 +307,6 @@
                         <EditText
                             android:id="@+id/nmq107"
                             style="@style/EditText"
-                            android:enabled="false"
                             android:layout_marginBottom="12dp"
                             android:hint="@string/nmq107" />
                     </LinearLayout>
@@ -409,8 +404,8 @@
                             android:layout_marginBottom="12dp"
                             android:hint="####"
                             android:maxLength="4"
-                            app:minValue="1000"
                             app:maxValue="8000"
+                            app:minValue="1000"
                             app:pattern="[0-9]{4}"
                             app:type="range" />
                     </LinearLayout>
@@ -641,102 +636,72 @@
                                     android:id="@+id/nmq20401"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
-                                    android:checked="@{nmq204098.checked ? false : false}"
-                                    android:enabled="@{nmq204098.checked ? false : true}"
                                     android:text="@string/nmq20401" />
 
                                 <CheckBox
                                     android:id="@+id/nmq20402"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
-                                    android:checked="@{nmq204098.checked ? false : false}"
-                                    android:enabled="@{nmq204098.checked ? false : true}"
                                     android:text="@string/nmq20402" />
 
                                 <CheckBox
                                     android:id="@+id/nmq20403"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
-                                    android:checked="@{nmq204098.checked ? false : false}"
-                                    android:enabled="@{nmq204098.checked ? false : true}"
                                     android:text="@string/nmq20403" />
 
                                 <CheckBox
                                     android:id="@+id/nmq20404"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
-                                    android:checked="@{nmq204098.checked ? false : false}"
-                                    android:enabled="@{nmq204098.checked ? false : true}"
                                     android:text="@string/nmq20404" />
 
                                 <CheckBox
                                     android:id="@+id/nmq20405"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
-                                    android:checked="@{nmq204098.checked ? false : false}"
-                                    android:enabled="@{nmq204098.checked ? false : true}"
                                     android:text="@string/nmq20405" />
 
                                 <CheckBox
                                     android:id="@+id/nmq20406"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
-                                    android:checked="@{nmq204098.checked ? false : false}"
-                                    android:enabled="@{nmq204098.checked ? false : true}"
                                     android:text="@string/nmq20406" />
 
                                 <CheckBox
                                     android:id="@+id/nmq20407"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
-                                    android:checked="@{nmq204098.checked ? false : false}"
-                                    android:enabled="@{nmq204098.checked ? false : true}"
                                     android:text="@string/nmq20407" />
 
                                 <CheckBox
                                     android:id="@+id/nmq20408"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
-                                    android:checked="@{nmq204098.checked ? false : false}"
-                                    android:enabled="@{nmq204098.checked ? false : true}"
                                     android:text="@string/nmq20408" />
 
                                 <CheckBox
                                     android:id="@+id/nmq20409"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
-                                    android:checked="@{nmq204098.checked ? false : false}"
-                                    android:enabled="@{nmq204098.checked ? false : true}"
                                     android:text="@string/nmq20409" />
 
                                 <CheckBox
                                     android:id="@+id/nmq204010"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
-                                    android:checked="@{nmq204098.checked ? false : false}"
-                                    android:enabled="@{nmq204098.checked ? false : true}"
                                     android:text="@string/nmq204010" />
 
                                 <CheckBox
                                     android:id="@+id/nmq204011"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
-                                    android:checked="@{nmq204098.checked ? false : false}"
-                                    android:enabled="@{nmq204098.checked ? false : true}"
                                     android:text="@string/nmq204011" />
-
-                                <CheckBox
-                                    android:id="@+id/nmq204098"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:text="@string/nmq204098" />
 
                                 <CheckBox
                                     android:id="@+id/nmq204096"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
-                                    android:checked="@{nmq204098.checked ? false : false}"
-                                    android:enabled="@{nmq204098.checked ? false : true}"
                                     android:text="@string/nmq204096" />
 
                                 <EditText
@@ -749,6 +714,13 @@
                                     android:text='@{nmq204096.checked ? nmq204096x.getText().toString() : ""}'
                                     android:visibility='@{nmq204096.checked? View.VISIBLE : View.GONE}' />
                             </LinearLayout>
+
+                            <CheckBox
+                                android:id="@+id/nmq204098"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:tag="-1"
+                                android:text="@string/nmq204098" />
 
                         </LinearLayout>
                     </androidx.cardview.widget.CardView>
