--- a/app/src/main/res/layout/activity_section_info_kmc.xml
+++ b/app/src/main/res/layout/activity_section_info_kmc.xml
@@ -783,6 +783,43 @@
                     </androidx.cardview.widget.CardView>
 
 
+                    <!--kf2a5b-->
+                    <androidx.cardview.widget.CardView
+                        android:id="@+id/cvkf2a5b"
+                        style="@style/cardViews">
+
+                        <LinearLayout style="@style/vlinearlayout">
+
+                            <TextView
+                                style="@style/textviews"
+                                android:text="@string/kf2a5b" />
+
+                            <RadioGroup
+                                android:id="@+id/kf2a5b"
+                                style="@style/radiogroups"
+                                android:orientation="horizontal">
+
+                                <RadioButton
+                                    android:id="@+id/kf2a5ba"
+                                    style="@style/radiobuttons"
+                                    android:layout_width="0dp"
+                                    android:layout_weight="1"
+                                    android:text="@string/yes" />
+
+                                <RadioButton
+                                    android:id="@+id/kf2a5bb"
+                                    style="@style/radiobuttons"
+                                    android:layout_width="0dp"
+                                    android:layout_weight="1"
+                                    android:text="@string/no" />
+
+                            </RadioGroup>
+
+                        </LinearLayout>
+
+                    </androidx.cardview.widget.CardView>
+
+
                 </LinearLayout>
 
 
