--- a/app/src/main/res/layout/activity_section_c_form2.xml
+++ b/app/src/main/res/layout/activity_section_c_form2.xml
@@ -44,8 +44,8 @@
                             android:hint="##.#"
                             android:layoutDirection="ltr"
                             app:mask="##.#"
-                            app:maxValue="40"
-                            app:minValue="34"
+                            app:maxValue="37.5"
+                            app:minValue="36.5"
                             app:pattern="^(\\d{2,2}\\.\\d{1,1})$"
                             app:type="range" />
 
@@ -70,6 +70,7 @@
 
                         <com.edittextpicker.aliazaz.EditTextPicker
                             android:id="@+id/kf2c02"
+                            android:layoutDirection="ltr"
                             style="@style/EditTextNum"
                             android:layout_width="0dp"
                             android:layout_weight="1"
@@ -103,6 +104,7 @@
                             style="@style/EditTextNum"
                             android:layout_width="0dp"
                             android:layout_weight="1"
+                            android:layoutDirection="ltr"
                             android:hint="##"
                             android:maxLength="2"
                             app:maxValue="80"
