--- a/app/src/main/res/layout/activity_sectionmra.xml
+++ b/app/src/main/res/layout/activity_sectionmra.xml
@@ -924,14 +924,14 @@
                         android:onClick="@{callback::BtnContinue}"
                         android:text="@string/nextSection" />
 
-                    <!--<Button
+                    <Button
                         android:id="@+id/btnEnd"
                         style="@style/buttons"
                         android:layout_width="0dp"
                         android:layout_weight="1"
                         android:background="@android:color/holo_red_light"
-                        android:onClick="@{() -> callback.BtnEnd()}"
-                        android:text="@string/endForm" />-->
+                        android:onClick="@{callback::BtnEnd}"
+                        android:text="@string/endForm" />
                 </LinearLayout>
 
             </LinearLayout>
